--- a/src/style/common.less
+++ b/src/style/common.less
@@ -24,4 +24,9 @@ button {
   &:after {
     border: none;
   }
+  &:active {
+    width: 100%;
+    height: 40px;
+    opacity: 0.5;    //这里重要，就是通过这个透明度来设置
+  }
 }
