--- a/src/style/common.less
+++ b/src/style/common.less
@@ -1,16 +1,16 @@
 @import "./weui.less";
 
 page {
-    font-size: 32rpx;
-    height: 100%;
-    font-weight: 400;
-    font-family:PingFangSC-Light,PingFang SC;
+  font-size: 32rpx;
+  height: 100%;
+  font-weight: 400;
+  font-family:PingFangSC-Light,PingFang SC;
 }
 ::-webkit-scrollbar {
-    width: 0;
-    height: 0;
-    color: transparent;
-    display: none;
+  width: 0;
+  height: 0;
+  color: transparent;
+  display: none;
 }
 .page_title {
   font-weight: 400;
@@ -27,6 +27,6 @@ button {
   &:active {
     width: 100%;
     height: 40px;
-    opacity: 0.5;    //这里重要，就是通过这个透明度来设置
+    opacity: 0.5;
   }
 }
