--- a/src/style/base/variable/color.less
+++ b/src/style/base/variable/color.less
@@ -1,5 +1,5 @@
 // color
-@weuiColorPrimary: #1890FF;
+@weuiColorPrimary: #F56666;
 @weuiColorWarn: #ff7618;
 @weuiColorError:    #FF4444;
 @weuiColorSuccess: rgb(12, 12, 11);
