--- a/src/style/common.less
+++ b/src/style/common.less
@@ -3,8 +3,7 @@
 page {
   font-size: 32rpx;
   height: 100%;
-  font-weight: 400;
-  font-family:PingFangSC-Light,PingFang SC;
+  font-family: PingFangSC-Regular;
 }
 ::-webkit-scrollbar {
   width: 0;
@@ -13,12 +12,10 @@ page {
   display: none;
 }
 .page_title {
-  font-weight: 400;
   font-size: 36rpx;
 }
 .page_subTitle {
-  font-weight: 300;
-  font-size: 30rpx;
+  font-size: 28rpx;
 }
 button {
   &:after {
