--- a/src/style/base/variable/color.less
+++ b/src/style/base/variable/color.less
@@ -24,12 +24,11 @@
 @weuiLineColorDark: rgba(0, 0, 0, .3);
 
 // text
-@weuiTextColorTitle: #111111;
-@weuiTextColorDesc: rgba(17,17,17,.6);
-@weuiTextColorTips: #999999;
+@weuiTextColorTitle: #000000;
+@weuiTextColorDesc: #666666;
+@weuiTextColorGray: #999999;
 @weuiTextColorLight: #6A6A6A;
 @weuiTextColorWarn: @weuiColorWarn;
 @weuiTextColorWhite: #ffffff;
-@weuiTextColorGray: #999999;
 @weuiCellActiveBg: #1890FF;
 @weuiCellShadow: rgba(49,101,204,0.1);
