--- a/src/style/order.less
+++ b/src/style/order.less
@@ -1,65 +1,69 @@
 .send_view {
   height: 100%;
+  .page_content {
+    height: calc(100% - 100px);
+  }
+  .order-text {
+    color: #333333;
+  }
+  .no_border {
+    border-bottom: none;
+  }
   .order-header {
-    margin: 0;
-    .order-col1 {
-      margin: 20rpx 36rpx;
-    }
-    .order-address-name {
-      font-size: 30rpx;
+    &.order-row {
+      margin-left: 36rpx;
+      padding: 36rpx 36rpx 36rpx 0;
     }
     .order-left {
+      width: 60rpx;
+      height: 60rpx;
       border-radius: 50%;
+      font-size: 30rpx;
       color: #ffffff;
-      background:linear-gradient(270deg,rgba(255,89,121,1) 0%,rgba(255,135,135,1) 100%);
-      &.order-left-reduce {
-        width: 68rpx;
-        height: 68rpx;
-        font-size: 28rpx;
-        font-weight:400;
-      }
+      background: #f56666;
+      line-height: 60rpx;
     }
     .order-right {
-      font-size: 26rpx;
-      font-weight:300;
-      color: #666;
-      margin-left: 48rpx;
-      &.order-right-info {
-        line-height: 50rpx;
+      font-size: 32rpx;
+      color: #000000;
+      margin-left: 30rpx;
+      line-height: 56rpx;
+      flex: 1;
+      &.order-right-default {
+        color: #999999;
+      }
+      .order-contactName {
         text {
-          font-weight: 400;
-          color: #000000;
-          margin-right: 20rpx;
-          font-size: 30rpx;
-          display: inline-block;
+          margin-right: 40rpx;
         }
+      }
+      .order-address {
+        font-size: 28rpx;
+        color: #666666;
+        line-height: 36rpx;
       }
     }
     &.order-header1 {
-      border-top: 1px solid #EAEAEA;
-      .order-left {
-        background: #eeeeee;
-        color: #333333;
+      &.order-row {
+        margin-left: 0;
+        padding: 34rpx 36rpx;
       }
-      .order-right { 
-        color: #333333;
-        flex: 1;
-        font-size: 26rpx;
-        line-height: 50rpx;
+      .order-left {
+        background: #f0f0f0;
+        color: #666666;
       }
     }
   }
-  .order_content {
-    padding-top: 20rpx;
-    .order-row {
-      color: #000000;
-      padding: 20rpx 36rpx;
-      font-size: 32rpx;
-      
-      .order-time {
-        font-weight: 400;
-        font-size: 30rpx;
-      }
+  .order-row {
+    color: #333333;
+    padding: 34rpx 36rpx;
+    font-size: 30rpx;
+    border-bottom: 1px solid #f0f0f0;
+    .label-left {
+      color: #666666;
     }
+  }
+  .order_content {
+    border-bottom: 20rpx solid #f5f6f8;
   }
 }
