--- a/src/style/header.less
+++ b/src/style/header.less
@@ -1,21 +1,17 @@
 .send-header {
-  padding: 20rpx 0 50rpx;
+  padding: 18rpx 0 40rpx;
   text-align: center;
-  .cancel-icon {
+  .bg-icon {
     height: 220rpx;
     width: 250rpx;
-    margin: 0 auto;
+    margin: 40rpx auto 30rpx;
   }
   .send-tip {
-    padding-top: 20rpx;
-    line-height: 50rpx;
     color: #000000;
     font-size: 36rpx;
     text-align: center;
-    // text {
-    //   margin-right: 20rpx;
-    // }
     .tip-text {
+      margin-top: 10rpx;
       font-size: 28rpx;
       color: #999999;
     }
