--- a/src/style/order.less
+++ b/src/style/order.less
@@ -1,6 +1,7 @@
 .send_view {
   height: 100%;
   .page_content {
+    overflow: auto;
     height: calc(100% - 100px);
   }
   .order-text {
@@ -59,6 +60,9 @@
     padding: 34rpx 36rpx;
     font-size: 30rpx;
     border-bottom: 1px solid #f0f0f0;
+    &.sample-row {
+      padding: 30rpx 36rpx ;
+    }
     .label-left {
       color: #666666;
     }
